--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
+    <item android:id="@+id/refresh_playlist" android:title="@string/refresh_playlist"
+          android:orderInCategory="10" app:showAsAction="never" />
+
     <item android:id="@+id/action_shuffle" android:title="@string/action_shuffle_all"
         android:orderInCategory="10" app:showAsAction="never" />
 
